--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="images/kstopka.png" />
+        <img src="Images/kstopka.png" />
       </td>
       <td>
         <h1> Kaitlin Stopka</h1>
@@ -128,7 +128,7 @@
     <a href="contactme.html">Contact Me!</a>
   </p>
 
-<center><img src="images/Shakespeare Quote.jpg" /></center>
+<center><img src="Images/Shakespeare Quote.jpg" /></center>
 
 
 </body>
