changed image locations to Image

--- a/loves.html
+++ b/loves.html
@@ -13,10 +13,10 @@
     <a href="https://www.refinery29.com/en-gb/best-books-march-2020">reading</a>
   </li>
   <li>
-    <a href="images/Craft Cocktails.jpg">craft cocktails</a>
+    <a href="Images/Craft Cocktails.jpg">craft cocktails</a>
   </li>
   <li>
-    pups, meet <a href="images/Jasper.jpg">jasper</a> & <a href="images/Hansel.jpg">hansel</a>
+    pups, meet <a href="Images/Jasper.jpg">jasper</a> & <a href="Images/Hansel.jpg">hansel</a>
   </li>
   <li>
     <a href="images/GOD.JPG">god</a>
