Added updated URL to get back to the homepage

--- a/loves.html
+++ b/loves.html
@@ -19,7 +19,7 @@
     pups, meet <a href="Images/Jasper.jpg">jasper</a> & <a href="Images/Hansel.jpg">hansel</a>
   </li>
   <li>
-    <a href="images/GOD.JPG">god</a>
+    <a href="Images/GOD.JPG">god</a>
   </li>
   <li>
     taking walks
@@ -36,7 +36,7 @@
   </li>
 </ul>
 <hr />
-<a href="file:///Users/Kaitlin/Documents/K/WEB%20DEVELOPMENT/HTML-%20Personal%20Site/index.html">
+<a href="https://kstopka3.github.io/cv/">
   you don't have to go home but you can't stay here</a>
 </body>
 
